--- a/styles/style.css
+++ b/styles/style.css
@@ -396,8 +396,8 @@ td:hover {
 
   rating-widget{
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically if needed */
+    justify-content: center;
+    align-items: center;
   }
 
   rating-widget label{
@@ -410,8 +410,8 @@ td:hover {
 
   .rating_sys{
     display: flex;
-    flex-direction: row-reverse; /* Keep this to maintain the reverse order */
-    justify-content: center; /* Center the stars */
+    flex-direction: row-reverse;
+    justify-content: center;
     border: 5px solid var(--secondary-color);
     background-color: var(--primary-color);
     padding: 20px;
@@ -445,6 +445,7 @@ td:hover {
     max-width: 600px; 
     margin: 10 auto;
     font-weight: bold;
+    text-align: center;
   }
 
   weather-widget{
@@ -455,7 +456,7 @@ td:hover {
     
   }
 
-  #weather_no_JS, .weather_text{
+  #weather_no_JS, #weather_updates, .weather_text{
     color: var(--primary-color);
     font-weight: bold;
   }
